Bug 161430 - odp with duplicate stylenames doesn't display the same
Summary: odp with duplicate stylenames doesn't display the same
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.3.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0 target:24.2.5
Keywords:
Depends on:
Blocks: ImpressDraw-Styles
  Show dependency treegraph
 
Reported: 2024-06-05 18:57 UTC by Caolán McNamara
Modified: 2024-08-15 10:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example (106.59 KB, application/vnd.oasis.opendocument.presentation)
2024-06-05 18:57 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2024-06-05 18:57:14 UTC
Description:
background color in some elements of this presentations are missing and default to fallback 'blue'

Steps to Reproduce:
1. Load the attached example
2. Slide 3 and 4 show unwanted "blue" background color 

Actual Results:
Slide 3 and 4 show a "blue" background color 

Expected Results:
These should be a white background


Reproducible: Always


User Profile Reset: No

Additional Info:
The "blue" is the default when the style isn't found.

a) This was bisected to:

commit d6bdcff5f739179efdd060083dc7feef14e5ba4d
Date:   Wed Apr 17 14:41:48 2024 +0200

    tdf#160706 speed up loading conditional formatting rule in XLS (II)
    
    Reduce the work we do in IndexedStyleSheets::Reindex
    
    takes my test document from 117s to 48s

b) but doesn't affect the 24.8 series, I believe because of:

commit 5f62629af6d12d505b029db85c276daedf5017b1
Date: Sun Mar 10 10:10:05 2024 +0200

tdf#158773 avoid Reindex() until we are done renaming

which preceded the above in the 24.8 series, but isn't in 24.2, and basically works around the problem
Comment 1 Caolán McNamara 2024-06-05 18:57:29 UTC
Created attachment 194558 [details]
example
Comment 2 Caolán McNamara 2024-06-05 19:00:59 UTC
@xisco: this is a more minimal example of the document mentioned in https://gerrit.libreoffice.org/c/core/+/168473
Comment 3 Caolán McNamara 2024-06-05 19:01:33 UTC
and https://gerrit.libreoffice.org/c/core/+/168479 intended to fix this
Comment 4 Commit Notification 2024-06-06 06:26:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9fa0b6977ba8292bfcc313caf080733090974c3f

Resolves: tdf#161430 reindex the correct style if there are duplicate names

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-06 06:27:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/3999f5d12b2964d440a0a193cef76d889a9a0da7

Resolves: tdf#161430 reindex the correct style if there are duplicate names

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-10 15:51:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed5bac73c8e09c606b271f385431c5a57b84bbb5

Related: tdf#161430 add test case to guard against its return

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.