sd/qa/unit/import-tests2.cxx
@@ -57,6 +57,9 @@
 #include <sfx2/linkmgr.hxx>
 #include <vcl/BitmapReadAccess.hxx>
 #include <vcl/dibtools.hxx>
+#include <sdresid.hxx>
+#include <stlpool.hxx>
+#include <strings.hrc>
 
 using namespace ::com::sun::star;
 
@@ -150,6 +153,7 @@ public:
     void testShapeMasterText();
     void testIndentDuplication();
     void testMasterSlides();
+    void testTdf161430();
 
     CPPUNIT_TEST_SUITE(SdImportTest2);
 
@@ -233,6 +237,7 @@ public:
     CPPUNIT_TEST(testShapeMasterText);
     CPPUNIT_TEST(testIndentDuplication);
     CPPUNIT_TEST(testMasterSlides);
+    CPPUNIT_TEST(testTdf161430);
 
     CPPUNIT_TEST_SUITE_END();
 };
@@ -2094,6 +2099,26 @@ void SdImportTest2::testMasterSlides()
     uno::Reference<drawing::XDrawPages> xMasterPages(xMasterPagesSupplier->getMasterPages());
     CPPUNIT_ASSERT(xMasterPages.is());
     CPPUNIT_ASSERT_EQUAL(sal_Int32(7), xMasterPages->getCount());
+}
+
+void SdImportTest2::testTdf161430()
+{
+    // Without the bug fix this opens with the classic solid 'blue' background used in "Outline 1"
+    // as seen in slide 3
+    createSdImpressDoc("odp/tdf161430.odp");
+    SdXImpressDocument* pXImpressDocument = dynamic_cast<SdXImpressDocument*>(mxComponent.get());
+    CPPUNIT_ASSERT(pXImpressDocument);
+    SdDrawDocument* pDoc = pXImpressDocument->GetDoc();
+
+    SdStyleSheetPool* const pPool(pDoc->GetSdStyleSheetPool());
+
+    OUString aStyleName(SdResId(STR_PSEUDOSHEET_OUTLINE) + " 1");
+    SfxStyleSheetBase* pStyleSheet = pPool->Find(aStyleName, SfxStyleFamily::Pseudo);
+    CPPUNIT_ASSERT(pStyleSheet);
+
+    const XFillStyleItem& rFillStyle = pStyleSheet->GetItemSet().Get(XATTR_FILLSTYLE);
+    drawing::FillStyle eXFS = rFillStyle.GetValue();
+    CPPUNIT_ASSERT_EQUAL(drawing::FillStyle_NONE, eXFS);
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(SdImportTest2);
